src/objects/AIA_Workplan_Type_Task__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enter Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assgin_To_Non_AIA_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign To Non-AIA Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignee_Type__c</fullName>
        <label>Assignee Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assignment_Description__c</fullName>
        <label>Assignment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Workplan Type Assignment</relationshipLabel>
        <relationshipName>Workplan_Type_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workplan_Type_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date_Determined_By__c</fullName>
        <label>Due Date Determined By</label>
        <picklist>
            <picklistValues>
                <fullName>Expected Days To Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Timeline</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Days_To_Complete__c</fullName>
        <label>Expected Days To Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <picklist>
            <picklistValues>
                <fullName>Benefit Design Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits Core Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Structure Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGIT Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Platinum Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project 51 Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlement Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Support Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplan Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIA Default Queue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Service Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlements Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGIT Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGIT ID Card Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDH Benefit Liaison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BeneFact Coder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BeneFact Tester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASCO Coder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASCO Tester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASCO Account Implementer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID Card Contact (TOS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Dedicated Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Dedicated Rep Back-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;C Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facets Migration Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Code__c</fullName>
        <label>Assignment Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Assignment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplan_Type_Stage__c</fullName>
        <label>Workplan Type Stage</label>
        <referenceTo>Workplan_Type_Stage__c</referenceTo>
        <relationshipName>Workplan_Type_Task</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Workplan_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Type</label>
        <referenceTo>AIA_Workplan_Type__c</referenceTo>
        <relationshipName>Workplan_Type_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X120_Day_Offset__c</fullName>
        <label>120 Day Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X180_Day_Offset__c</fullName>
        <label>180 Day Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X60_Day_Offset__c</fullName>
        <label>60 Day Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Workplan Type Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>WPT</fullName>
        <columns>NAME</columns>
        <columns>Workplan_Type__c</columns>
        <columns>Workplan_Type_Stage__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>WPT</label>
    </listViews>
    <nameField>
        <displayFormat>WTA-{000000}</displayFormat>
        <label>Workplan Type Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Type Assignment</pluralLabel>
    <recordTypes>
        <fullName>Workplan_Assignment</fullName>
        <active>true</active>
        <label>Workplan Assignment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EWTA_001</fullName>
        <active>true</active>
        <description>Making user field mandatory if assignee type is user</description>
        <errorConditionFormula>IF( 
AND( 
TEXT(  Assignee_Type__c  ) = &quot;User&quot;, 
ISBLANK(  Default_Owner__c  )), True, False 
)</errorConditionFormula>
        <errorDisplayField>Default_Owner__c</errorDisplayField>
        <errorMessage>EWTA_001:  Please Enter Value in User</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWTA_002</fullName>
        <active>true</active>
        <description>Making user mandatory if assignee type is Queue</description>
        <errorConditionFormula>IF( 
AND( 
TEXT(  Assignee_Type__c  ) = &quot;Queue&quot;, 
ISBLANK(  TEXT( Queue_Name__c)   )), True, False 
)</errorConditionFormula>
        <errorDisplayField>Queue_Name__c</errorDisplayField>
        <errorMessage>EWTA_002: Please Enter Value in Queue Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWTA_003</fullName>
        <active>true</active>
        <description>Making Role mandatory if assignee type is Role</description>
        <errorConditionFormula>IF( 
AND( 
TEXT(  Assignee_Type__c  ) = &quot;Role&quot;, 
ISBLANK(  TEXT(  Role__c )   )), True, False 
)</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>EWTA_003 : Please select a Value in Role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWTA_004</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Assgin_To_Non_AIA_Contact__c =true, ISBLANK(    Contact__c  )  )</errorConditionFormula>
        <errorMessage>Please Enter Value in Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Queue_Mandatory_Assigneetype_Queue</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ispickval(Assignee_Type__c,&apos;Queue&apos;), ISBLANK( text( Queue_Name__c) )  )</errorConditionFormula>
        <errorMessage>Please Enter Value in Queue Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Role_Mandatory_Assigneetype_Role</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ispickval(Assignee_Type__c,&apos;Role&apos;), ISBLANK( text(  Role__c ) )  )</errorConditionFormula>
        <errorMessage>Please select a Value in Role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Mandatory_Assigneetype_user</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ispickval(Assignee_Type__c,&apos;User&apos;), ISBLANK( Default_Owner__c )  )</errorConditionFormula>
        <errorMessage>Please Enter Value in User</errorMessage>
    </validationRules>
</CustomObject>